# inv123

./: .env.example  .gitignore  .replit  API_DOCUMENTATION.md  README.md  TECHNICAL_IMPLEMENTATION_DOCUMENT.md  app.py  check_invoice_schema.py  check_invoice_vendor.py  config.py  correct_invoice_amount.py  fix_invoice_506.py  fix_invoice_amount.py  fix_invoice_data.py  fix_vendor_netsuite_id.py  invoice_processor.py  netsuite_support_email.md  pyproject.toml  repair_vendor_netsuite.py  replit.md  sample_vendors_english.csv  sample_vendors_german.csv  sample_vendors_spanish.csv  start.sh  subscription_scan_worker.py  test_bigquery_schema.py  test_invoice.py  test_invoice_generation.py  update_invoice_correct_amount.py
agent/: __init__.py  brain.py  tools.py
attached_assets/: Pasted--ADDITIONAL-ENDPOINTS-FOR-UI-DASHBOARD-INTEGRATION-ENDPOINT-9-Create-Pending-Action-UI-Notificat-1763840660903_1763840660903.txt  Pasted--API-SPECIFICATION-FOR-REPLIT-BACKEND-Base-URL-Structure-https-secret-invoice-extractor-1-BarakH-1763840368033_1763840368034.txt  Pasted--AUTOMATIC-VENDOR-MATCHING-Nick-DeMatt-1763884152172_1763884152173.txt  Pasted--Entity-Classification-VENDOR-HIGH-Reasoning-The-name-Nick-DeMatteo-with-a-phone-number-s-1763884129589_1763884129590.txt  Pasted--GEMINI-3-PRO-SEMANTIC-VENDOR-RESOLUTION-ENGINE-This-prompt-forces-the-AI-to-think-1763883409200_1763883409201.txt  Pasted--Gmail-Invoice-Scanner-Initialized-Time-range-Last-1-days-Authenticating-with-Gmail-API-Conn-1763901145574_1763901145574.txt  Pasted--Gmail-Invoice-Scanner-Initialized-Time-range-Last-1-days-Authenticating-with-Gmail-API-Conn-1763902941465_1763902941465.txt  Pasted--Gmail-Invoice-Scanner-Live-Progress-Minimize-Gmail-Invoice-Scanner-Initialized-Time-range--1763899623681_1763899623682.txt  Pasted--Grand-Total-169-25-USD-LAYER-3-5-Semantic-Vendor-Identity-Resolution--1763905413281_1763905413281.txt  Pasted--Import-from-Gmail-Automatically-scan-your-Gmail-for-invoices-and-receipts-Gmail-Connected-22--1763822551024_1763822551024.txt  (+33 more)
data/: agent_memory.db  (+2 more)
(+64 files in other folders)
