[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "flask>=3.1.2",
    "gevent>=25.9.1",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-discoveryengine>=0.15.0",
    "google-cloud-documentai>=3.7.0",
    "google-cloud-storage>=3.6.0",
    "google-genai>=1.52.0",
    "gunicorn>=23.0.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "langsmith>=0.4.48",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "sift-stack-py>=0.9.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
